--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -2,6 +2,9 @@
 *{
 	box-sizing: border-box;
 }
+body{
+	font-family: "Helvetica", sans-serif;
+}
 .row{
 	width: 100%;
 }
@@ -15,6 +18,9 @@ div{
 h1{
 	text-align: center;
 	margin-bottom: 50px;
+}
+p{
+	font-weight: bold;
 }
 h3{
 	position: absolute;
