--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -11,7 +11,7 @@ body{
 div{
 	background-color: #eee;
 	border:2px solid #000;
-	margin: 10px 15px;
+	margin: 15px 15px;
 	position: relative;
 	padding: 40px 15px 2px 15px;
 }
@@ -64,5 +64,8 @@ h3{
 }
 /*MOBILE STYLES*/
 @media (max-width: 767px){
-
+	.col-sm-12{
+		width: 100%;
+		float: left;
+	}
 }
